# tcc-topojson

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  package.json  pyproject.toml  requirements.txt  tcc-330-markers.json  tcc-330.json  validate.py  viewer.html
src/: boundary.py  build.py  category_a.py  category_b.py  category_c.py  destinations.py  download.py  markers.py  types.py  utils.py
tests/: conftest.py  test_boundary.py  test_build.py  test_category_a.py  test_category_b.py  test_category_c.py  test_destinations.py  test_download.py  test_markers.py  test_utils.py  test_validate.py
